Fix z-index-issues with header

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -76,6 +76,7 @@ paper-menu.paper-menu-0 {
 .main-core-toolbar {
     color: #FAFAFA !important;
     background-color: @secondary-color !important;
+    z-index: 999999999;
 }
 
 .default-toolbar {
@@ -285,7 +286,7 @@ iron-icon.padded-icon {
     position: fixed !important;
     left: 0 !important;
     top: 0 !important;
-    z-index: 99999;
+    z-index: 9999;
 }
 
 .mm-sharing-btns {
